style: 입력 처리와 테스트 표현 정리